--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
+    "@agm/core": "^1.1.0",
     "@angular/common": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
@@ -21,29 +21,29 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/camera": "^5.3.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/geolocation": "^5.2.0",
-    "@ionic-native/google-maps": "^5.0.0-beta.27",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.6.0",
-    "@logisticinfotech/ionic4-datepicker": "^1.2.0",
-    "@types/googlemaps": "^3.30.16",
-    "agm-direction": "^0.7.6",
-    "agm-overlays": "^1.3.3",
+    "@ionic-native/camera": "^5.19.1",
+    "@ionic-native/core": "^5.19.1",
+    "@ionic-native/geolocation": "^5.19.1",
+    "@ionic-native/google-maps": "^5.5.0",
+    "@ionic-native/splash-screen": "^5.19.1",
+    "@ionic-native/status-bar": "^5.19.1",
+    "@ionic/angular": "^4.11.7",
+    "@logisticinfotech/ionic4-datepicker": "^1.4.3",
+    "@types/googlemaps": "^3.39.1",
+    "agm-direction": "^0.7.9",
+    "agm-overlays": "^1.4.1",
     "angular-progress-bar": "^1.0.9",
     "cordova-android": "8.0.0",
-    "cordova-plugin-camera": "^4.0.3",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^3.1.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "core-js": "^2.5.4",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "core-js": "^2.6.11",
     "moment": "^2.24.0",
     "ngx-rating": "0.0.9",
     "rxjs": "~6.3.3",
@@ -58,20 +58,20 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "~1.4.0",
+    "@ionic/angular-toolkit": "^1.4.1",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^10.12.30",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
-    "ts-node": "~8.0.0",
+    "ts-node": "^8.0.3",
     "tslint": "~5.12.0",
     "typescript": "~3.4.3"
   },
