--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "agm-overlays": "^1.4.1",
     "angular-progress-bar": "^1.0.9",
     "cordova-android": "8.0.0",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-geolocation": "^4.0.2",
@@ -82,7 +83,9 @@
       "cordova-plugin-googlemaps": {
         "API_KEY_FOR_ANDROID": "AIzaSyDAxopl1Aak_YJJ56_pfVfbnVPYlwul7YE",
         "PLAY_SERVICES_VERSION": "15.0.1",
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+        "ANDROID_SUPPORT_V4_VERSION": "27.+",
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
@@ -95,7 +98,8 @@
       "cordova-plugin-camera": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
