--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "agm-overlays": "^1.3.3",
     "angular-progress-bar": "^1.0.9",
     "cordova-android": "8.0.0",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -95,7 +96,8 @@
       "cordova-plugin-camera": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
